@@ -59,6 +59,7 @@ setup(name='zope.app.server',
                         'zope.interface',
                         'zope.publisher',
                         'zope.server',
+                        'zope.processlifetime',
                         'zdaemon',
                         'ZConfig',
                         'ZODB3',
